--- a/html/dino-brain/public/index.html
+++ b/html/dino-brain/public/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width">
 	<script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
 	<script type="text/javascript" src="js/jquery.kontrol.js"></script>
+	<link rel="stylesheet" href="css/style.css" />
 	<!-- <script type="text/javascript" src="js/socket.js"></script> -->
 
 	<!-- <script src="http://192.168.8.50:8081/socket.io/socket.io.js"></script> -->
@@ -13,11 +14,11 @@
 	
 
 </head>
-<body style=" background-color: black;">
+<body>
 	<h2 style="font-family: arial; color:  white;">DINO CONTROL BETA</h2>
 	<!-- <div style="background-color:blue; width:300px; height:300px;" id="xyPad2"></div> -->
 
-	<div style="float:left;width:250px;padding:30px" id="xyPad">
+	<div style="width:250px; padding:30px; display:block;" id="xyPad">
                 <!-- <div style="margin-bottom:10px">XY</div> -->
                 <fieldset class="pad" data-width="250" data-height="250">
                     <legend>XY Pad</legend>
@@ -25,52 +26,24 @@
                     y : <input name="y" id="yInput" value=100>
                 </fieldset>
 	</div>
+
+	<div >
+		<button type="button" class="bigBtn" id="systemOnBtn">MOTORS ON</button>
+		
+		<button type="button" class="bigBtn" id="systemOffBtn">MOTORS OFF</button>
+	</div>
+	<div>
+		<button type="button" class="bigBtn" id="centerBtn">CENTER</button>
+		
+		<button type="button" class="bigBtn" id="topBtn">TOP</button>
+	</div>
 	
 	<div id="status"></div>
 	
 	<script src="/socket.io/socket.io.js"></script>
 
-  <script type="text/javascript" src="js/script.js"></script>
+  	<script type="text/javascript" src="js/script.js"></script>
 
-	<script>
-		
-	   // socket = io.connect('192.168.8.50', { port: 8081, rememberTransport: false});
-	   /*socket = io.connect('192.168.8.50');
-	   console.log('oi');
-	   socket.on('connect', function() {
-			// sends to socket.io server the host/port of oscServer
-			// and oscClient
-			socket.emit('config',
-				{
-					server: {
-						port: 3333,
-						host: '192.168.8.50'
-					},
-					client: {
-						port: 3334,
-						host: '192.168.8.50'
-					}
-				}
-			);
-		});*/
-
-		/*socket.on('message', function(obj) {
-			var status = document.getElementById("status");
-			status.innerHTML = obj[0];
-			console.log(obj);
-		});*/
-
-		/*function oscSend(key, value){
-			socket.emit(key, value);
-		};*/
-
-	$(function($) {
-
-	});
-
-
-		
-	</script>
 
 </body>
 </html>
